Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = ['Homer', 'Marge', 'Bart', 'Maggie', 'Lisa']\""
+    "names = ['Homer', 'Marge', 'Bart', 'Maggie', 'Lisa']"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "'Homer Simpson'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
